--- a/test/lightbox-gallery/style.css
+++ b/test/lightbox-gallery/style.css
@@ -41,25 +41,39 @@
 			#iviewer .controls .close { background-image: url('img/btn_close.png'); }
 			#iviewer .controls .zoomin { background-image: url('img/btn_zoomin.png'); }
 			#iviewer .controls .zoomout { background-image: url('img/btn_zoomout.png'); }
-			#iviewer .controls .next { background-image: url('img/btn_next.png'); }		
+			#iviewer .controls .rotate_left { background-image: url('img/rotate_left.png'); }
+			#iviewer .controls .rotate_right { background-image: url('img/rotate_right.png'); }
+			#iviewer .controls .next { background-image: url('img/btn_next.png'); }
 
-	#iviewer .info {
+/*	#iviewer .info {
 		position: fixed;
 		bottom: 0;
 		width: 300px;
 		left: 50%;
 		margin-left: -150px;
-		display: block;		
-		text-align:center;		
+		display: block;
+		text-align:center;
+		color: #ccc;
+		font-size: 18px;
+		padding: 0;
+		z-index: 2;
+	}*/
+	#iviewer .info {
+		position: fixed;
+		bottom: 0;
+		width: 100%;
+		left: 0;
+		display: block;
+		text-align:center;
 		color: #ccc;
 		font-size: 18px;
 		padding: 0;
 		z-index: 2;
 	}
-	
+
 	#iviewer .info p {
 		display:inline;
-		vertical-align: top;				
+		vertical-align: top;
 	}
 
 	#iviewer .viewer {
@@ -77,3 +91,27 @@
 		background: url('img/spinner.gif') no-repeat center center;
 		z-index: 2;
 	}
+#iviewer .thumbs{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: 0;
+	text-align: center;
+	background: #000;
+	padding: 5px 0;
+}
+#iviewer .thumbs li{
+	display: inline-block;
+	height: 50px;
+	margin: 0 2px;
+	cursor: pointer;
+	opacity: .3;
+	/*float: left;*/
+}
+#iviewer .thumbs li:hover,
+#iviewer .thumbs li.active{
+	opacity: 1;
+}
+#iviewer .thumbs li img{
+	height: 100%;
+}
